--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>My first application!</h1>
     <p>Welcome to <i>Learning javascript, 3rd edition</i>.</p>
-    <scrip scr="https://code.jquery.com/jquery-2.1.1.min.js"></scrip>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
